✨ (TV show) enabled usage of different episode groups
This enabled a better usage of different orders for TV shows (like aired, dvd, netflix, ...)

#1935
#1138
#736